Adicionando primeiras telas e terminando algumas entidades